<resources>
    <string name="app_name">Pokedex</string>
    <string name="titulo_pokedex">Pokédex</string>
    <string name="btn_anterior">Anterior</string>
    <string name="btn_proximo">Próximo</string>
    <string name="label_pagina">Página %1$d de %2$d</string>
    <string name="btn_ir">Ir</string>
    <string name="hint_pagina">Pág</string>
    <string name="btn_time">Time</string>
    <string name="titulo_time">Meu Time Pokémon</string>
    <string name="msg_time_vazio">Seu time está vazio. Adicione alguns Pokémons!</string>
    <string name="meu_time_titulo">Meu Time Pokémon</string>
    <string name="time_descricao">Seu time</string>
    <string name="btn_voltar">Voltar</string>
    <string name="hint_buscar">Buscar Pokémon...</string>
    <string name="menu_random_pokemon">Pokémon Aleatório</string>
    <string name="menu_team">Meu Time</string>
    <string name="shake_to_open">Sacuda o telefone para abrir a pokébola!</string>
    <string name="pokemon_reveal_title">Seu Pokémon Aleatório:</string>
    <string name="AddEquipe">Adicionar a equipe</string>
    <string name="remover">Remover</string>
    <string name="pokemon_imagem">Imagem do Pokémon</string>
    <string name="menu_history">Histórico</string>
    <string name="titulo_history">Vistos Recentemente</string>
    <string name="msg_history_vazio">Você ainda não visitou nenhum Pokémon.</string>
    <string name="menu_map">Mapa</string>
    <string name="map_title">Encontre locais que vendem produtos Pokémon perto de você!</string>
</resources>
